log/build_2023-03-06_15-59-12/qbert_py_movement/stderr.log
/usr/lib/python3/dist-packages/setuptools/command/install.py:34: SetuptoolsDeprecationWarning: setup.py install is deprecated. Use build and pip and other standards-based tools.
  warnings.warn(
  File "/home/johnma/ros2_ws/install/qbert_py_movement/lib/python3.10/site-packages/qbert_py_movement/reactor.py", line 26
    def ir_callback(self, ir)
                             ^
SyntaxError: expected ':'

